fix alignment side

--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,8 @@ h2 {
     font-family: serif;
     margin-top: 70px;
     margin-bottom: -10px;
-    margin-right: auto
+    margin-left: auto;
+    margin-right: 0
 }
 h3 {
     font-size: 150%; 
@@ -276,7 +277,9 @@ ul.posts span {
     overflow: hidden;
 }
 .meta {
-    margin-right: auto
+    margin-left: auto;
+    margin-right: 0;
+    color: #bbb
 }
 .site .footer .contact {
     float: left;
